--- a/CSS/app.css
+++ b/CSS/app.css
@@ -1,11 +1,11 @@
 h1 {
-    color: red;
+    color: rgba(0, 200, 100, 0.2);
 }
 
 li {
-    color: green;
+    color: rgb(100, 0, 100);
 }
 
 h4 {
-    color: purple;
+    color: rgb(11, 99, 150);
 }
