--- a/CSS/app.css
+++ b/CSS/app.css
@@ -1,5 +1,9 @@
 h1 {
-    color: rgba(0, 200, 100, 0.2);
+    color: rgba(0, 200, 100, 0.8);
+    /*border-color: purple;
+    border-width: 5px;
+    border-style: solid;*/
+    border: 2px solid purple;
 }
 
 li {
@@ -7,5 +11,12 @@ li {
 }
 
 h4 {
-    color: rgb(11, 99, 150);
+   background: rgb(255,100,100);
+}
+
+body {
+/*    background: url(https://imgprod65.hobbylobby.com/3/c1/f8/3c1f8f79826e7b349d7e7ae09f86682eaf7bac2a/350Wx350H-617126-1018.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;*/
+    background: pink;
 }
